{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 23,
  "lineage": "526c40d7-5d4d-9165-ac28-b189b2fad51a",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "lb",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/828972ea-f1cd-4a9b-a9eb-e3d67eeca561/resourceGroups/Tata-RG/providers/Microsoft.Network/loadBalancers/Tata-Lb/frontendIPConfigurations/Tata-IP",
                "name": "Tata-IP",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/828972ea-f1cd-4a9b-a9eb-e3d67eeca561/resourceGroups/Tata-RG/providers/Microsoft.Network/publicIPAddresses/Tata-loadbalancer-ip"
              }
            ],
            "id": "/subscriptions/828972ea-f1cd-4a9b-a9eb-e3d67eeca561/resourceGroups/Tata-RG/providers/Microsoft.Network/loadBalancers/Tata-Lb",
            "location": "eastus",
            "name": "Tata-Lb",
            "resource_group_name": "Tata-RG",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_public_ip.ip-loadbalancer",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "lb-pool",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/828972ea-f1cd-4a9b-a9eb-e3d67eeca561/resourceGroups/Tata-RG/providers/Microsoft.Network/loadBalancers/Tata-Lb/backendAddressPools/Tata-Lb-BackendPool",
            "loadbalancer_id": "/subscriptions/828972ea-f1cd-4a9b-a9eb-e3d67eeca561/resourceGroups/Tata-RG/providers/Microsoft.Network/loadBalancers/Tata-Lb",
            "name": "Tata-Lb-BackendPool",
            "resource_group_name": "Tata-RG"
          },
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_public_ip.ip-loadbalancer",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "lb-health-probe",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/828972ea-f1cd-4a9b-a9eb-e3d67eeca561/resourceGroups/Tata-RG/providers/Microsoft.Network/loadBalancers/Tata-Lb/probes/Tata-Tcp-Lb-Probe",
            "interval_in_seconds": 5,
            "loadbalancer_id": "/subscriptions/828972ea-f1cd-4a9b-a9eb-e3d67eeca561/resourceGroups/Tata-RG/providers/Microsoft.Network/loadBalancers/Tata-Lb",
            "name": "Tata-Tcp-Lb-Probe",
            "number_of_probes": 2,
            "port": 80,
            "protocol": "Tcp",
            "resource_group_name": "Tata-RG"
          },
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_public_ip.ip-loadbalancer",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "lb-rule",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/828972ea-f1cd-4a9b-a9eb-e3d67eeca561/resourceGroups/Tata-RG/providers/Microsoft.Network/loadBalancers/Tata-Lb/backendAddressPools/Tata-Lb-BackendPool",
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/828972ea-f1cd-4a9b-a9eb-e3d67eeca561/resourceGroups/Tata-RG/providers/Microsoft.Network/loadBalancers/Tata-Lb/frontendIPConfigurations/Tata-IP",
            "frontend_ip_configuration_name": "Tata-IP",
            "frontend_port": 80,
            "id": "/subscriptions/828972ea-f1cd-4a9b-a9eb-e3d67eeca561/resourceGroups/Tata-RG/providers/Microsoft.Network/loadBalancers/Tata-Lb/loadBalancingRules/Tata-Lb-Rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/828972ea-f1cd-4a9b-a9eb-e3d67eeca561/resourceGroups/Tata-RG/providers/Microsoft.Network/loadBalancers/Tata-Lb",
            "name": "Tata-Lb-Rule",
            "probe_id": "/subscriptions/828972ea-f1cd-4a9b-a9eb-e3d67eeca561/resourceGroups/Tata-RG/providers/Microsoft.Network/loadBalancers/Tata-Lb/probes/Tata-Tcp-Lb-Probe",
            "protocol": "Tcp",
            "resource_group_name": "Tata-RG"
          },
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_lb_backend_address_pool.lb-pool",
            "azurerm_lb_probe.lb-health-probe",
            "azurerm_public_ip.ip-loadbalancer",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic-backend",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/828972ea-f1cd-4a9b-a9eb-e3d67eeca561/resourceGroups/Tata-RG/providers/Microsoft.Network/networkInterfaces/Tata-backend-nic",
            "internal_domain_name_suffix": "mapo4ckdt2fu1ebjbadaxjylvg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "Tata-IP-config-DB",
                "primary": true,
                "private_ip_address": "192.168.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/828972ea-f1cd-4a9b-a9eb-e3d67eeca561/resourceGroups/Tata-RG/providers/Microsoft.Network/publicIPAddresses/Tata-backend-ip",
                "subnet_id": "/subscriptions/828972ea-f1cd-4a9b-a9eb-e3d67eeca561/resourceGroups/Tata-RG/providers/Microsoft.Network/virtualNetworks/Tata-Vnet/subnets/Tata-backend-db"
              }
            ],
            "location": "eastus",
            "name": "Tata-backend-nic",
            "private_ip_address": "192.168.2.4",
            "private_ip_addresses": [
              "192.168.2.4"
            ],
            "resource_group_name": "Tata-RG"
          },
          "dependencies": [
            "azurerm_public_ip.ip-backend",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet-private",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic-frontend",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/828972ea-f1cd-4a9b-a9eb-e3d67eeca561/resourceGroups/Tata-RG/providers/Microsoft.Network/networkInterfaces/Tata-frontend-nic",
            "internal_domain_name_suffix": "mapo4ckdt2fu1ebjbadaxjylvg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "Tata-IP-config",
                "primary": true,
                "private_ip_address": "192.168.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/828972ea-f1cd-4a9b-a9eb-e3d67eeca561/resourceGroups/Tata-RG/providers/Microsoft.Network/publicIPAddresses/Tata-frontend-ip",
                "subnet_id": "/subscriptions/828972ea-f1cd-4a9b-a9eb-e3d67eeca561/resourceGroups/Tata-RG/providers/Microsoft.Network/virtualNetworks/Tata-Vnet/subnets/Tata-frontend-server"
              }
            ],
            "location": "eastus",
            "name": "Tata-frontend-nic",
            "private_ip_address": "192.168.1.4",
            "private_ip_addresses": [
              "192.168.1.4"
            ],
            "resource_group_name": "Tata-RG"
          },
          "dependencies": [
            "azurerm_public_ip.ip-frontend",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet-public",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "Lb-pool-association",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/828972ea-f1cd-4a9b-a9eb-e3d67eeca561/resourceGroups/Tata-RG/providers/Microsoft.Network/loadBalancers/Tata-Lb/backendAddressPools/Tata-Lb-BackendPool",
            "id": "/subscriptions/828972ea-f1cd-4a9b-a9eb-e3d67eeca561/resourceGroups/Tata-RG/providers/Microsoft.Network/networkInterfaces/Tata-frontend-nic/ipConfigurations/Tata-IP-config|/subscriptions/828972ea-f1cd-4a9b-a9eb-e3d67eeca561/resourceGroups/Tata-RG/providers/Microsoft.Network/loadBalancers/Tata-Lb/backendAddressPools/Tata-Lb-BackendPool",
            "ip_configuration_name": "Tata-IP-config",
            "network_interface_id": "/subscriptions/828972ea-f1cd-4a9b-a9eb-e3d67eeca561/resourceGroups/Tata-RG/providers/Microsoft.Network/networkInterfaces/Tata-frontend-nic"
          },
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_lb_backend_address_pool.lb-pool",
            "azurerm_network_interface.nic-frontend",
            "azurerm_public_ip.ip-frontend",
            "azurerm_public_ip.ip-loadbalancer",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet-public",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nic-nsg-association",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/828972ea-f1cd-4a9b-a9eb-e3d67eeca561/resourceGroups/Tata-RG/providers/Microsoft.Network/networkInterfaces/Tata-frontend-nic|/subscriptions/828972ea-f1cd-4a9b-a9eb-e3d67eeca561/resourceGroups/Tata-RG/providers/Microsoft.Network/networkSecurityGroups/Tata-frontend-nsg",
            "network_interface_id": "/subscriptions/828972ea-f1cd-4a9b-a9eb-e3d67eeca561/resourceGroups/Tata-RG/providers/Microsoft.Network/networkInterfaces/Tata-frontend-nic",
            "network_security_group_id": "/subscriptions/828972ea-f1cd-4a9b-a9eb-e3d67eeca561/resourceGroups/Tata-RG/providers/Microsoft.Network/networkSecurityGroups/Tata-frontend-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.nic-frontend",
            "azurerm_network_security_group.nsg-frontend",
            "azurerm_public_ip.ip-frontend",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet-public",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nic-nsg-association-backend",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/828972ea-f1cd-4a9b-a9eb-e3d67eeca561/resourceGroups/Tata-RG/providers/Microsoft.Network/networkInterfaces/Tata-backend-nic|/subscriptions/828972ea-f1cd-4a9b-a9eb-e3d67eeca561/resourceGroups/Tata-RG/providers/Microsoft.Network/networkSecurityGroups/Tata-backend-nsg",
            "network_interface_id": "/subscriptions/828972ea-f1cd-4a9b-a9eb-e3d67eeca561/resourceGroups/Tata-RG/providers/Microsoft.Network/networkInterfaces/Tata-backend-nic",
            "network_security_group_id": "/subscriptions/828972ea-f1cd-4a9b-a9eb-e3d67eeca561/resourceGroups/Tata-RG/providers/Microsoft.Network/networkSecurityGroups/Tata-backend-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.nic-backend",
            "azurerm_network_security_group.nsg-backend",
            "azurerm_public_ip.ip-backend",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet-private",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg-backend",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/828972ea-f1cd-4a9b-a9eb-e3d67eeca561/resourceGroups/Tata-RG/providers/Microsoft.Network/networkSecurityGroups/Tata-backend-nsg",
            "location": "eastus",
            "name": "Tata-backend-nsg",
            "resource_group_name": "Tata-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "MySql-Access",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "Internet",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Stop-Internet",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg-frontend",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/828972ea-f1cd-4a9b-a9eb-e3d67eeca561/resourceGroups/Tata-RG/providers/Microsoft.Network/networkSecurityGroups/Tata-frontend-nsg",
            "location": "eastus",
            "name": "Tata-frontend-nsg",
            "resource_group_name": "Tata-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTPS",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "ip-backend",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/828972ea-f1cd-4a9b-a9eb-e3d67eeca561/resourceGroups/Tata-RG/providers/Microsoft.Network/publicIPAddresses/Tata-backend-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "Tata-backend-ip",
            "resource_group_name": "Tata-RG",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "ip-frontend",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/828972ea-f1cd-4a9b-a9eb-e3d67eeca561/resourceGroups/Tata-RG/providers/Microsoft.Network/publicIPAddresses/Tata-frontend-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "Tata-frontend-ip",
            "resource_group_name": "Tata-RG",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "ip-loadbalancer",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/828972ea-f1cd-4a9b-a9eb-e3d67eeca561/resourceGroups/Tata-RG/providers/Microsoft.Network/publicIPAddresses/Tata-loadbalancer-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.82.140.243",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "Tata-loadbalancer-ip",
            "resource_group_name": "Tata-RG",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet-private",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.2.0/24",
            "address_prefixes": [
              "192.168.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/828972ea-f1cd-4a9b-a9eb-e3d67eeca561/resourceGroups/Tata-RG/providers/Microsoft.Network/virtualNetworks/Tata-Vnet/subnets/Tata-backend-db",
            "name": "Tata-backend-db",
            "resource_group_name": "Tata-RG",
            "virtual_network_name": "Tata-Vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet-public",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.1.0/24",
            "address_prefixes": [
              "192.168.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/828972ea-f1cd-4a9b-a9eb-e3d67eeca561/resourceGroups/Tata-RG/providers/Microsoft.Network/virtualNetworks/Tata-Vnet/subnets/Tata-frontend-server",
            "name": "Tata-frontend-server",
            "resource_group_name": "Tata-RG",
            "virtual_network_name": "Tata-Vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "private-nsg-association",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/828972ea-f1cd-4a9b-a9eb-e3d67eeca561/resourceGroups/Tata-RG/providers/Microsoft.Network/virtualNetworks/Tata-Vnet/subnets/Tata-backend-db",
            "network_security_group_id": "/subscriptions/828972ea-f1cd-4a9b-a9eb-e3d67eeca561/resourceGroups/Tata-RG/providers/Microsoft.Network/networkSecurityGroups/Tata-backend-nsg",
            "subnet_id": "/subscriptions/828972ea-f1cd-4a9b-a9eb-e3d67eeca561/resourceGroups/Tata-RG/providers/Microsoft.Network/virtualNetworks/Tata-Vnet/subnets/Tata-backend-db"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg-backend",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet-private",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "public-nsg-association",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/828972ea-f1cd-4a9b-a9eb-e3d67eeca561/resourceGroups/Tata-RG/providers/Microsoft.Network/virtualNetworks/Tata-Vnet/subnets/Tata-frontend-server",
            "network_security_group_id": "/subscriptions/828972ea-f1cd-4a9b-a9eb-e3d67eeca561/resourceGroups/Tata-RG/providers/Microsoft.Network/networkSecurityGroups/Tata-frontend-nsg",
            "subnet_id": "/subscriptions/828972ea-f1cd-4a9b-a9eb-e3d67eeca561/resourceGroups/Tata-RG/providers/Microsoft.Network/virtualNetworks/Tata-Vnet/subnets/Tata-frontend-server"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg-frontend",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet-public",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.0.0/16"
            ],
            "guid": "09ef1e60-9f43-4d0b-9029-08060ba70bae",
            "id": "/subscriptions/828972ea-f1cd-4a9b-a9eb-e3d67eeca561/resourceGroups/Tata-RG/providers/Microsoft.Network/virtualNetworks/Tata-Vnet",
            "location": "eastus",
            "name": "Tata-Vnet",
            "resource_group_name": "Tata-RG",
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}